# urlwatch-feed

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
docker/: Dockerfile
urlwatch_feed/: Watcher.py  main.py
